creating-elements hw

--- a/exercises/15-creating-elements/creating-elements.html
+++ b/exercises/15-creating-elements/creating-elements.html
@@ -25,14 +25,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EXERCISES Creating Elements</title>
-
+    <link href="creating-elements.css" rel="stylesheet">
+    <!--script type="text/javascript" src="dist/purify.min.js"></script-->
     <!--
       Optional: Add any CSS libraries or your own CSS here. For example:
       @see https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link for external files
       @see https://developer.mozilla.org/en-US/docs/Web/HTML/Element/style for <style> tags
     -->
   </head>
-  <body>
+  <body id="body">
     <!-- Put your HTML here -->
+    
+    <div class="boxed">
+      Creating Elements
+    </div>
+    <h1 class="h2">
+      Welcome
+    </h1>
+    <h4>Subscribe to our newsletter for hot tips on random stuff!</h4>
+    <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title> 
+</head>
+<body>
+  <form name="emailForm" method="POST">
+    <input type="email" id="email" placeholder="E-mail">
+    <div>
+ <!--<input type="password" id="pass" name="password" placeholder="Password"
+             minlength="8" required> -->
+  </div>
+  <script src="creating-elements.js"></script>  
+  </form>
+  <div id="email-result"></div>
+</body>
+</html>
   </body>
 </html>
